--- a/templates/Webpages/Home.html
+++ b/templates/Webpages/Home.html
@@ -1,6 +1,10 @@
 <p>Hello {{ username }}</p>
 <div>
-    <a href="/login">登陆</a> <a href="/login/register">注册</a> <a href="/login/logout">注销</a>
+    <a href="/login">普通登陆</a>
+    <a href="/login/recog_login">人脸登录</a>
+    <a href="/login/register">注册</a>
+    <a href="/login/recog_register">人脸注册</a>
+    <a href="/login/logout">注销</a>
 </div>
 
 <div>
