播放页面对接中，目前已经完成视频播放，视频简介的输出，评论区的位置有问题，要和前端商量 url 127.0.0.1:8000/playpage/video/123.mp4

--- a/templates/Webpages/play_page.html
+++ b/templates/Webpages/play_page.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript">
 	
 		var flashvars={
-			f:'/media/{{ video_name }}',
+			f:'{{ video.video.url }}',
 			c:0,
 			b:0,
 			loaded:'loadedHandler'
