--- a/templates/Webpages/video.html
+++ b/templates/Webpages/video.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Video</title>
 	<meta charset='utf-8'/>
-    <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
-    <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/home.css">
+  <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
+  <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
+  <link rel="stylesheet" type="text/css" href="/static/css/video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-    <script type="text/javascript" src="/static/js/home.js"></script>
-
+  <script type="text/javascript" src="/static/js/video.js"></script>
 </head>
 <body>
-	<div id='header'>
+	 <div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title">Super&nbsp; JiJi</p>
@@ -28,31 +27,31 @@
           <li id = "Nav_Video">
             <p id="Txt_video">Video</p>
             <img id= "Line_video" class="Line"src="/static/images/header/line.png" />
-            <a id= "Hot_video" class="Hot" href="/video"></a>
+            <a id= "Hot_video" class="Hot" href="./video.html"></a>
           <li>
           <li id = "Nav_Audio">
             <p id="Txt_audio">Audio</p>
             <img id= "Line_audio" class="Line"src="/static/images/header/line.png" />
-            <a id= "Hot_audio" class="Hot" href="/audio"></a>
+            <a id= "Hot_audio" class="Hot" href="./audio.html"></a>
           </li>
           <li id = "Nav_Image">
             <p id="Txt_image">Image</p>
             <img id= "Line_image" class="Line" src="/static/images/header/line.png"/>
-            <a id= "Hot_image" class="Hot" href="/gallery"></a>
+            <a id= "Hot_image" class="Hot" href="./image.html"></a>
           <li>
         </ul>
         <!-- Search -->
         <div id = 'Search'>
           <a href="#"><p id="Search_login" class="paragraph">Login</p></a>
           <div id = 'User'>
-            <a href="/personal_page" ><p id="User_name" class="paragraph">{{username}}</p></a>
+            <a href="personal_page.html" ><p id="User_name" class="paragraph">{{ username }}</p></a>
             <p id="User_circle1" class="paragraph">○</p>
             <a href="#"><p id="User_logout" class="paragraph">Logout</p></a>
             <p id="User_circle2" class="paragraph">○</p>
-            <a href="/transform/upload/"><p id="User_upload" class="paragraph">Upload</p></a>
+            <a href="upload.html"><p id="User_upload" class="paragraph">Upload</p></a>
           </div>
           <img id="Search_bgd" src="/static/images/header/Search_bgd.png"/>
-          <a id="search" href ="/search"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
+          <a id="search" href ="./search.html"><img id="Search_icon" src="/static/images/header/Search_icon.png"/></a>
         </div>
         <!-- Login -->
         <div id="Login">
@@ -135,30 +134,63 @@
     </ul>
   </div>
 
-      <!-- Video showing -->
-      <div id = "Video">
-        <p class="Title">Video</p>
-        <a class="More" href="video.html" style="text-decoration:underline;">more</a>
+      <div id = "Animation">
+        <p class="Title">Animation</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
 
-        <ul id = "video_display" class="display">
+        <ul id = "animation_display" class="display">
         </ul>
       </div>
-      <!-- Audio showing -->
-      <div id = "Audio">
-        <p class="Title">Audio</p>
-        <a class="More" href="audio.html" style="text-decoration:underline;">more</a>
-        <ul id="audio_display" class="display">
-        </ul>
-      </div>
-      <!-- Image showing -->
-      <div id = "Image">
-        <p class="Title">Image</p>
-        <a class="More" href="image.html" style="text-decoration:underline;">more</a>
 
-        <!-- Unnamed (Repeater) -->
-        <ul id="image_display" class="display">
+      <div id = "Music">
+        <p class="Title">Music</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="music_display" class="display">
         </ul>
       </div>
+
+      <div id = "Gaming">
+        <p class="Title">Gaming</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="gaming_display" class="display">
+        </ul>
+      </div>
+
+      <div id = "Tech">
+        <p class="Title">Tech&amp;Science</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="tech_display" class="display">
+        </ul>
+      </div>
+
+      <div id = "Entertainment">
+        <p class="Title">Entertainment</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="entertainment_display" class="display">
+        </ul>
+      </div>
+
+      <div id = "TV">
+        <p class="Title">Movies&amp;TV</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="TV_display" class="display">
+        </ul>
+      </div>
+
+      <div id = "Life">
+        <p class="Title">Daily life</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="life_display" class="display">
+        </ul>
+      </div>
+
+      <div id = "Fashion">
+        <p class="Title">Fashion</p>
+        <a class="More" href="search.html" style="text-decoration:underline;">more</a>
+        <ul id="fashion_display" class="display">
+        </ul>
+      </div>
+
       <!-- Footer -->
       <div id = "Footer">
         <p id="Footer_txt_1" class="paragraph">Contact us</p>
@@ -173,13 +205,13 @@
         <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
       </div>
 </body>
+<script type="text/javascript">
+	$('#photo').slider();
+</script>
 {% if username %}
     <script>
         document.getElementById("Search_login").style.visibility="hidden";
         document.getElementById("User").style.visibility="visible";
     </script>
 {% endif %}
-<script type="text/javascript">
-	$('#photo').slider();
-</script>
 </html>
