--- a/fornt end design and code/Super○JiJi/css/image_display.css
+++ b/fornt end design and code/Super○JiJi/css/image_display.css
@@ -12,31 +12,35 @@
   position:absolute;
   z-index:0;
 }
+#Display_image {
+  position: relative;
+  top: 200px;
+  height: 850px;
+}
 #Image_txt {
   position:absolute;
   left:140px;
-  top:142px;
+  top:-58px;
   width:70px;
   height:28px;
 }
 #Image_bgd {
   position:absolute;
   left:110px;
-  top:200px;
   width:1200px;
   height:530px;
 }
 #Image_display {
   position:absolute;
   left:140px;
-  top:230px;
+  top:30px;
   width:760px;
   height:420px;
 }
 #Image_title {
   position:absolute;
   left:960px;
-  top:220px;
+  top:20px;
   width:101px;
   height:39px;
   font-family:'CenturyGothic-Bold', 'Century Gothic Bold', 'Century Gothic';
@@ -46,7 +50,7 @@
 #Image_discription {
   position:absolute;
   left:960px;
-  top:290px;
+  top:90px;
   width:300px;
   height:264px;
   font-family:'CenturyGothic', 'Century Gothic';
@@ -57,14 +61,14 @@
 #Image_download_icon {
   position:absolute;
   left:140px;
-  top:675px;
+  top:475px;
   width:30px;
   height:30px;
 }
 #Image_download_txt {
   position:absolute;
   left:180px;
-  top:664px;
+  top:464px;
   width:87px;
   height:21px;
   font-size:18px;
@@ -73,14 +77,14 @@
 #Image_like_icon {
   position:absolute;
   left:340px;
-  top:675px;
+  top:475px;
   width:30px;
   height:30px;
 }
 #Image_like_txt {
   position:absolute;
   left:380px;
-  top:664px;
+  top:464px;
   width:37px;
   height:21px;
   font-size:18px;
@@ -89,7 +93,7 @@
 #Image_like_num {
   position:absolute;
   left:427px;
-  top:664px;
+  top:464px;
   width:29px;
   height:21px;
   font-size:18px;
@@ -97,14 +101,14 @@
 #Image_dislike_icon{
   position:absolute;
   left:520px;
-  top:680px;
+  top:480px;
   width:30px;
   height:30px;
 }
 #Image_dislike_txt {
   position:absolute;
   left:571px;
-  top:664px;
+  top:464px;
   width:59px;
   height:21px;
   font-size:18px;
@@ -113,7 +117,7 @@
 #Image_dislike_num {
   position:absolute;
   left:640px;
-  top:664px;
+  top:464px;
   width:11px;
   height:21px;
   font-size:18px;
@@ -121,73 +125,79 @@
 #Image_collect_icon {
   position:absolute;
   left:710px;
-  top:680px;
+  top:480px;
   width:25px;
   height:25px;
 }
 #Image_collect_txt {
   position:absolute;
   left:750px;
-  top:664px;
+  top:464px;
   width:61px;
   height:21px;
   font-size:18px;
   color:#666666;
 }
+#Display_author {
+  position: relative;
+  height: 300px;
+}
 #Author_bgd {
   position:absolute;
   left:110px;
-  top:810px;
   width:1200px;
   height:190px;
 }
 #Author_txt {
   position:absolute;
   left:130px;
-  top:752px;
+  top:-58px;
   width:80px;
   height:28px;
 }
 #Author_img {
   position:absolute;
   left:140px;
-  top:835px;
+  top:25px;
   width:140px;
   height:140px;
 }
 #Author_name {
   position:absolute;
   left:320px;
-  top:822px;
+  top:12px;
   width:90px;
   height:28px;
 }
 #Author_discription {
   position:absolute;
   left:320px;
-  top:870px;
+  top:60px;
   width:930px;
   height:54px;
   font-size:16px;
 }
+#Display_recommand {
+  position: relative;
+  height: 300px;
+}
 #Recommand_bgd {
   position:absolute;
   left:110px;
-  top:1080px;
   width:1200px;
   height:210px;
 }
 #Recommand_title {
   position:absolute;
   left:130px;
-  top:1022px;
+  top:-58px;
   width:202px;
   height:28px;
 }
 #item0{
   position: absolute;
   left:140px;
-  top:1105px;
+  top:25px;
 }
 #recommand a {
   position:absolute;
@@ -218,40 +228,43 @@
 #item1 {
   position:absolute;
   left:375px;
-  top:1105px;
+  top:25px;
   width:200px;
   height:140px;
 }
 #item2 {
   position:absolute;
   left:610px;
-  top:1105px;
+  top:25px;
   width:200px;
   height:140px;
 }
 #item3 {
   position:absolute;
   left:846px;
-  top:1105px;
+  top:25px;
   width:200px;
   height:140px;
 }
 #item4 {
   position:absolute;
   left:1080px;
-  top:1105px;
+  top:25px;
   width:200px;
   height:140px;
 }
 #Display_comments {
-  position:absolute;
-  left:110px;
-  top:1560px;
+  position:relative;
   width:1200px;
-  height:450px;
+}
+#Display_comments li{
+    left:110px;
+}
+.comments{
+  position: relative;
 }
 .Comments_bgd {
-  position:absolute;
+  position:relative;
   left:0px;
   top:0px;
   width:1200px;
@@ -323,30 +336,26 @@
   font-size:16px;
   color:#666666;
 }
+#Write_comment {
+  position: relative;
+  height: 200px;
+}
 #Comment_bgd {
   position:absolute;
   left:110px;
-  top:1380px;
   width:1200px;
   height:150px;
 }
 #Comment_input {
   position:absolute;
   left:269px;
-  top:1408px;
-  width:841px;
-  height:95px;
-}
-#u149_input {
-  position:absolute;
-  left:0px;
-  top:0px;
+  top:28px;
   width:841px;
   height:95px;
   font-family:'ArialMT', 'Arial';
   font-weight:400;
   font-style:normal;
-  font-size:13px;
+  font-size:16px;
   text-decoration:none;
   color:#000000;
   text-align:left;
@@ -356,19 +365,19 @@
 #Comment_title{
   position: absolute;
   left: 140px;
-  top:1320px;
+  top:-58px;
 }
 #Comment_img {
   position:absolute;
   left:135px;
-  top:1400px;
+  top:20px;
   width:90px;
   height:91px;
 }
 #Comment_name {
   position:absolute;
   left:146px;
-  top:1481px;
+  top:100px;
   width:68px;
   height:21px;
   font-size:18px;
@@ -376,7 +385,7 @@
 #Comment_send {
   position:absolute;
   left:1170px;
-  top:1440px;
+  top:60px;
   width:100px;
   height:30px;
   font-size:16px;
@@ -394,4 +403,14 @@
   top:-9px;
   width:96px;
   word-wrap:break-word;
+}
+#blank {
+  position: relative;
+  height: 80px
+}
+#Footer{
+  position: relative;
+  left:293px;
+  width:854px;
+  border-top: #888888 solid 1px;
 }
