--- a/fornt end design and code/Super○JiJi/css/signup.css
+++ b/fornt end design and code/Super○JiJi/css/signup.css
@@ -9,28 +9,25 @@
   text-align:left;
 }
 #base {
-  position:absolute;
+  position:relative;
+  top: 200px;
+  height: 1000px;
   z-index:0;
 }
-#Upload {
-  position: relative;
-  top: 200px;
-  height: 750px;
-}
-#upload_bgd {
-  position:absolute;
-  left:110px;
-  width:1200px;
-  height:660px;
-}
-#upload_title {
+#Signup_txt {
   position:absolute;
   left:140px;
   top:-58px;
-  width:82px;
+  width:89px;
   height:28px;
 }
-#upload_cover {
+#Signup_bgd {
+  position:absolute;
+  left:110px;
+  width:1200px;
+  height:900px;
+}
+#signup_img {
   position:absolute;
   left:190px;
   top:80px;
@@ -39,179 +36,177 @@
   font-size:28px;
   color:#999999;
 }
-#upload_cover_img {
+#signup_img_bgd {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:150px;
 }
-#upload_cover_txt1 {
+#signup_img_txt {
   position:absolute;
   left:2px;
   top:27px;
   width:196px;
   word-wrap:break-word;
 }
-#upload_cover_txt2 {
-  position:absolute;
-  left:2px;
-  top:50px;
-  width:196px;
-  word-wrap:break-word;
-}
-#File_txt {
+#signup_email_txt {
   position:absolute;
   left:490px;
-  top:62px;
-  width:50px;
+  top:80px;
+  width:81px;
   height:28px;
 }
-#File_input {
+#signup_email_input {
   position:absolute;
-  left:600px;
-  top:85px;
-  width:290px;
-  height:25px;
+  left:490px;
+  top:140px;
+  width:670px;
+  height:28px;
   font-family:'ArialMT', 'Arial';
   font-weight:400;
   font-style:normal;
-  font-size:13px;
+  font-size:16px;
   text-decoration:none;
   color:#000000;
   text-align:left;
 }
-#Title_txt {
+#signup_email_hint {
+  position:absolute;
+  left:500px;
+  top:160px;
+  width:148px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
+}
+#signup_usr_txt {
   position:absolute;
   left:490px;
-  top:142px;
-  width:58px;
+  top:180px;
+  width:125px;
   height:28px;
 }
-#Title_input {
+#signup_usr_input {
   position:absolute;
-  left:600px;
-  top:165px;
-  width:290px;
-  height:25px;
+  left:490px;
+  top:240px;
+  width:670px;
+  height:28px;
   font-family:'ArialMT', 'Arial';
   font-weight:400;
   font-style:normal;
-  font-size:13px;
+  font-size:16px;
   text-decoration:none;
   color:#000000;
   text-align:left;
 }
-#Discription_txt {
+#signup_usr_hint {
+  position:absolute;
+  left:500px;
+  top:260px;
+  width:174px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
+}
+#signup_pwd_txt {
   position:absolute;
   left:490px;
-  top:310px;
+  top:280px;
+  width:122px;
+  height:28px;
+}
+#signup_pwd_input {
+  position:absolute;
+  left:490px;
+  top:340px;
+  width:670px;
+  height:28px;
+  font-family:'ArialMT', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:16px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#signup_pwd_hint {
+  position:absolute;
+  left:500px;
+  top:360px;
+  width:141px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
+}
+#signup_rpwd_txt {
+  position:absolute;
+  left:490px;
+  top:380px;
+  width:218px;
+  height:28px;
+}
+#signup_rpwd_input {
+  position:absolute;
+  left:490px;
+  top:440px;
+  width:670px;
+  height:28px;
+  font-family:'ArialMT', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:16px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+}
+#signup_rpwd_hint {
+  position:absolute;
+  left:500px;
+  top:460px;
+  width:131px;
+  height:16px;
+  font-size:14px;
+  color:#990000;
+}
+#signup_dis_txt {
+  position:absolute;
+  left:490px;
+  top:480px;
   width:134px;
   height:28px;
 }
-#Discription_input {
+#signup_dis_input {
   position:absolute;
-  left:640px;
-  top:330px;
-  width:490px;
-  height:170px;
+  left:490px;
+  top:550px;
+  width:670px;
+  height:180px;
   font-family:'ArialMT', 'Arial';
   font-weight:400;
   font-style:normal;
-  font-size:13px;
+  font-size:16px;
   text-decoration:none;
   color:#000000;
   text-align:left;
 }
-#Type_txt {
-  position:absolute;
-  left:490px;
-  top:222px;
-  width:63px;
-  height:28px;
-}
-#Type_input {
+#Signup_bt {
   position:absolute;
   left:600px;
-  top:248px;
-  width:160px;
-  height:22px;
-  font-family:'ArialMT', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-}
-#Catagory_txt {
-  position:absolute;
-  left:790px;
-  top:222px;
-  width:113px;
-  height:28px;
-}
-#Catagory_input {
-  position:absolute;
-  left:920px;
-  top:248px;
-}
-#Catagory_video {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
-  height:22px;
-  font-family:'ArialMT', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-}
-#Catagory_audio {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
-  height:22px;
-  font-family:'ArialMT', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-  visibility: hidden;
-}
-#Catagory_image {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:210px;
-  height:22px;
-  font-family:'ArialMT', 'Arial';
-  font-weight:400;
-  font-style:normal;
-  font-size:13px;
-  text-decoration:none;
-  color:#000000;
-  visibility: hidden;
-}
-#Upload_bt {
-  position:absolute;
-  left:635px;
-  top:570px;
+  top:800px;
   width:220px;
   height:50px;
   font-size:24px;
 }
-#Upload_bt_bgd {
+#Signup_bt_bgd {
   position:absolute;
   left:0px;
   top:0px;
   width:220px;
   height:50px;
 }
-#Upload_bt_txt {
+#Signup_bt_txt {
   position:absolute;
   left:2px;
   top:-9px;
