更新最后版本，之后应该只会有小的改动
网页基本都可以互相连接，相应文件也改过了，下一步打算和template里面的文件整合一下，应该是最后一次更新这个文件夹，下一次就是static和template

--- a/fornt end design and code/Super○JiJi/css/reset.css
+++ b/fornt end design and code/Super○JiJi/css/reset.css
@@ -49,6 +49,7 @@
   text-align:left;
 }
 #reset_npwd_hint {
+  visibility: hidden;
   position:absolute;
   left:467px;
   top:150px;
@@ -79,6 +80,7 @@
   text-align:left;
 }
 #reset_rpwd_hint {
+  visibility: hidden;
   position:absolute;
   left:467px;
   top:262px;
