--- a/fornt end design and code/Super○JiJi/css/signup.css
+++ b/fornt end design and code/Super○JiJi/css/signup.css
@@ -72,6 +72,7 @@
   text-align:left;
 }
 #signup_email_hint {
+  visibility: hidden;
   position:absolute;
   left:500px;
   top:160px;
@@ -102,6 +103,7 @@
   text-align:left;
 }
 #signup_usr_hint {
+  visibility: hidden;
   position:absolute;
   left:500px;
   top:260px;
@@ -132,6 +134,7 @@
   text-align:left;
 }
 #signup_pwd_hint {
+  visibility: hidden;
   position:absolute;
   left:500px;
   top:360px;
@@ -162,6 +165,7 @@
   text-align:left;
 }
 #signup_rpwd_hint {
+  visibility: hidden;
   position:absolute;
   left:500px;
   top:460px;
@@ -212,6 +216,56 @@
   top:-9px;
   width:216px;
   word-wrap:break-word;
+}
+#Upload_image {
+  visibility: hidden;
+  position:fixed;
+  left:50%;
+  margin-left:-260px;
+  top:50%;
+  margin-top:-171px;
+}
+#Upload_image_bgd {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:520px;
+  height:342px;
+}
+#Upload_image_close {
+  position:absolute;
+  left:470px;
+  top:10px;
+  width:40px;
+  height:40px;
+}
+#Upload_image_img {
+  position:absolute;
+  left:40px;
+  top:46px;
+  width:250px;
+  height:250px;
+}
+#Upload_image_txt {
+  position:absolute;
+  left:150px;
+  top:220px;
+  width:235px;
+  height:13px;
+}
+#Upload_image_file {
+  position:absolute;
+  left:330px;
+  top:158px;
+  width:130px;
+  height:25px;
+  font-family:'ArialMT', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:13px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
 }
 #blank {
   position: relative;
