--- a/fornt end design and code/Super○JiJi/css/header.css
+++ b/fornt end design and code/Super○JiJi/css/header.css
@@ -254,6 +254,44 @@ ul{
   color:#EEEEEE;
   text-align:left;
 }
+#Face_login_page {
+  visibility: hidden;
+  position:fixed;
+  left:50%;
+  margin-left:-260px;
+  top:50%;
+  margin-top:-171px;
+  z-index: 15;
+}
+#Face_login_bgd {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:520px;
+  height:342px;
+}
+#Face_login_close {
+  position:absolute;
+  left:470px;
+  top:10px;
+  width:40px;
+  height:40px;
+}
+#Face_login_button {
+  position:absolute;
+  background-color: #FFFFFF;
+  left:250px;
+  top:150px;
+  width:40px;
+  height:16px;
+}
+#Face_login_txt {
+  position:absolute;
+  left:150px;
+  top:220px;
+  width:235px;
+  height:13px;
+}
 #forget_txt{
   position: absolute;
   left: 455px;
