摄像头嵌入
修改部分：
1. 每个网页的<head>中添加了camera的js
2. 每个网页的<header>
3. 每个网页底下对应的script
4. header的css文件
5. header的js文件
6. js文件夹中添加了新的js和swf
问题：（！！！）
1. 因为不知道具体camera旁边input干什么所以按钮暂时添加成那样
2. 登陆之后，摄像头无法关闭，网页一直处于调用摄像头中，没有添加关闭摄像头的js
【如果要添加关闭摄像头的js，可以在以下几个部分添加】
header.js中：
$("#Login_body").click(function(){}）
$("#Login_button").click(function(){}）
$("#Face_login_close").click(function(){}）
$("#Face_login_button").click(function(){}）
3. 建议是识别后有个跳转自动启动Face_login_button点击的效果，而不是人为点击

--- a/fornt end design and code/Super○JiJi/css/header.css
+++ b/fornt end design and code/Super○JiJi/css/header.css
@@ -8,10 +8,6 @@
   margin-right:auto;
   text-align:left;
 }
-#base {
-  position:absolute;
-  z-index:0;
-}
 #header{
   position:relative;
 }
@@ -258,15 +254,23 @@ ul{
   visibility: hidden;
   position:fixed;
   left:50%;
+  margin-left:-210px;
+  top:50%;
+  margin-top:-121px;
+  z-index: 12;
+}
+#Face_login_bgd {
+  visibility: hidden;
+  position:fixed;
+  left:50%;
   margin-left:-260px;
   top:50%;
   margin-top:-171px;
-  z-index: 15;
+  width:520px;
+  height:342px;
+  z-index: 11;
 }
-#Face_login_bgd {
-  position:absolute;
-  left:0px;
-  top:0px;
+#Face_login_bgd_img {
   width:520px;
   height:342px;
 }
@@ -277,20 +281,23 @@ ul{
   width:40px;
   height:40px;
 }
-#Face_login_button {
-  position:absolute;
-  background-color: #FFFFFF;
-  left:250px;
-  top:150px;
-  width:40px;
-  height:16px;
+#webcam{ 
+  float: left; 
 }
-#Face_login_txt {
-  position:absolute;
-  left:150px;
-  top:220px;
-  width:235px;
-  height:13px;
+#username {
+  position: absolute;
+  top: 50px;
+  left: 330px;
+}
+#capture_btn {
+  position: absolute;
+  top: 100px;
+  left: 350px;
+}
+#Face_login_button {
+  position: absolute;
+  top:150px;
+  left: 350px;
 }
 #forget_txt{
   position: absolute;
