--- a/fornt end design and code/Super○JiJi/css/header.css
+++ b/fornt end design and code/Super○JiJi/css/header.css
@@ -284,19 +284,28 @@ ul{
 #webcam{ 
   float: left; 
 }
-#username {
+#face_email_txt {
   position: absolute;
   top: 50px;
+  left: 330px;
+  width: 200px;
+  font-weight:150;
+  font-style:normal;
+  font-size:16px;
+}
+#username {
+  position: absolute;
+  top: 100px;
   left: 330px;
 }
 #capture_btn {
   position: absolute;
-  top: 100px;
-  left: 350px;
+  top: 150px;
+  left: 380px;
 }
 #Face_login_button {
   position: absolute;
-  top:150px;
+  top:200px;
   left: 350px;
 }
 #forget_txt{
